packages/svelte/tests/validator/samples/binding-invalid-references/input.svelte
<script>
	let a = $state("");
</script>

<input type="number" bind:focused={a} />
<input type="text" bind:focused={a} />
